Prometheus/Exporter/DaemonSet.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    matchLabels:
      app: node-exporter
  template:
    metadata:
      labels:
        app: node-exporter
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      serviceAccountName: node-exporter

      containers:
      - name: node-exporter
        image: quay.io/prometheus/node-exporter:latest
        imagePullPolicy: IfNotPresent
        args:
          - "--path.rootfs=/host"
        ports:
          - name: metrics
            containerPort: 9100
            hostPort: 9100
        volumeMounts:
          - name: rootfs
            mountPath: /host
            readOnly: true
          - name: proc
            mountPath: /host/proc
            readOnly: true
          - name: sys
            mountPath: /host/sys
            readOnly: true
          - name: dev
            mountPath: /host/dev
            readOnly: true

      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: proc
          hostPath:
            path: /proc
        - name: sys
          hostPath:
            path: /sys
        - name: dev
          hostPath:
            path: /dev
---
apiVersion: v1
kind: Service
metadata:
  name: node-exporter
  namespace: monitoring
  labels:
    app: node-exporter
spec:
  selector:
    app: node-exporter
  ports:
    - name: metrics
      port: 9100
      targetPort: 9100
  type: ClusterIP
