Prometheus/Exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ing
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
     - localhost
    secretName: my-tls
  rules:
    - host: localhost
      http:
        paths:
        - path: /metrics
          pathType: Prefix
          backend:
            service:
              name: node-exporter
              port:
                number: 9100
